--- a/accounts/templates/accounts/usuario_datos.html
+++ b/accounts/templates/accounts/usuario_datos.html
@@ -11,11 +11,11 @@
     </p>
     
     <p>
-        <li>{{request.user.first_name}}</li>
-        <li>{{request.user.last_name}}</li>
-        <li>{{request.user.email}}</li>
-        <li><img src="{{request.user.avatar.imagen.url}}" alt="imagen de perfil"></li>
-        <li>{{request.user.Avatar.link}}</li>
+        <li>Nombre: {{request.user.first_name}}</li>
+        <li>Apellido: {{request.user.last_name}}</li>
+        <li>Email: {{request.user.email}}</li>
+        <li>Imagen: <img src="{{request.user.avatar.imagen.url}}" alt="imagen de perfil"></li>
+        {% comment "" %}<li>{{request.user.Avatar.link}}</li>{% endcomment %}
     </p>
 
     <a href={% url 'editar' %}>Editar datos</a>
