--- a/recomendaciones/templates/recomendaciones/lista_peliculas.html
+++ b/recomendaciones/templates/recomendaciones/lista_peliculas.html
@@ -1,10 +1,31 @@
 {% extends 'index/index.html' %}
 
 {% block 'header_block' %}
+<header class="masthead">
+    <div class="container position-relative">
+        <div class="row justify-content-center">
+            <div class="col-xl-6">
+                <div class="text-center text-white">
+                    <!-- Page heading-->
+                    {% block header_text_block %}
+                    <h1 class="mb-5">
+                        {% if msj %}
+                            {{msj}}
+                        {% else %}
+                            <h1 class="mb-5">PELÍCULAS</h1>
+                        {% endif %}
+                    {% endblock header_text_block %}
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<p>
 <ul>
     <li><a href= {% url 'crear_recomendacion_pelicula' %}>Crear recomendación de Pelicula</a></li>
     <li><a href={% url 'busqueda_peliculas' %}>Buscar recomendaciones de Peliculas</a></li>
 </ul>
+</p>
 {% endblock 'header_block' %}
 
 {% block body_block %}
