--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -25,8 +25,9 @@
                 <a class="navbar-brand" href={% url 'lista_peliculas' %}>Peliculas</a>
                 {% if request.user.is_authenticated %}
                     <a class="navbar-brand" href={% url 'usuario_datos' %}>
-                        <img src="{{request.user.avatar.imagen.url}}" height= '30px' alt="imagen de perfil">
-                        {{request.user.username}}
+                        <div><img src='{{request.user.avatar.imagen.url}}' alt="Perfil", height= '30px'></div>
+                        {% comment "" %}<img src="{{request.user.avatar.imagen.url}}" height= '30px' alt="imagen de perfil">
+                        {{request.user.username}}{% endcomment %}
                     </a>
                     <a class="navbar-brand" href={% url 'logout' %}>Logout</a>
                 {% else %}
