--- a/accounts/templates/accounts/usuario_datos.html
+++ b/accounts/templates/accounts/usuario_datos.html
@@ -14,7 +14,9 @@
         <li>Nombre: {{request.user.first_name}}</li>
         <li>Apellido: {{request.user.last_name}}</li>
         <li>Email: {{request.user.email}}</li>
-        <li>Imagen: <img src="{{request.user.avatar.imagen.url}}" alt="imagen de perfil"></li>
+        {% if request.user.avatar.imagen %}
+            <li>Imagen: <img src="{{request.user.avatar.imagen.url}}" alt="imagen de perfil"></li>
+        {% endif %}
         <li>{{request.user.Avatar.link}}</li>
     </p>
 
