--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -24,11 +24,15 @@
                 <a class="navbar-brand" href={% url 'lista_series' %}>Series</a>
                 <a class="navbar-brand" href={% url 'lista_peliculas' %}>Peliculas</a>
                 {% if request.user.is_authenticated %}
-                    <a class="navbar-brand" href={% url 'usuario_datos' %}>
-                        <div><img src='{{request.user.avatar.imagen.url}}' alt="Perfil", height= '30px'></div>
-                        {% comment "" %}<img src="{{request.user.avatar.imagen.url}}" height= '30px' alt="imagen de perfil">
-                        {{request.user.username}}{% endcomment %}
-                    </a>
+                        <a class="navbar-brand" href={% url 'usuario_datos' %}>
+                            <div>
+                                {% if request.user.avatar.imagen %}
+                                    <img src='{{request.user.avatar.imagen.url}}' alt="Perfil", height= '30px'>
+                                {% else %}
+                                    Perfil
+                                {% endif %}
+                            </div>
+                        </a>
                     <a class="navbar-brand" href={% url 'logout' %}>Logout</a>
                 {% else %}
                     <a class="navbar-brand" href={% url 'login' %}>Login</a>
