--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -26,7 +26,7 @@
                 {% if request.user.is_authenticated %}
                         <a class="navbar-brand" href={% url 'usuario_datos' %}>
                             <div>
-                                {% if request.user.avatar.imagen %}
+                                {% if request.user.avatar.image %}
                                     <img src='{{request.user.avatar.imagen.url}}' alt="Perfil", height= '30px'>
                                 {% else %}
                                     Perfil
